@@ -4,8 +4,11 @@ git-core (1:1.5.6.2-1) unstable; urgency=low
   * debian/copyright: apply patch from Ansgar Burchardt: adopt proposed
     machine-readable format; clarify some license information (thx,
     closes: #488351).
+  * debian/rules: package gitweb: install gitweb.css, git-favicon.png,
+    git-logo.png into /usr/share/gitweb/ instead of /var/www/ (closes:
+    #479479).
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 15:44:38 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 06 Jul 2008 15:49:18 +0000
 
 git-core (1:1.5.6-1) unstable; urgency=low
 
